# MID

./: .gitignore  CMakeLists.txt  MID.h  display.cpp  display.hpp  main.cpp  rectangle.cpp  rectangle.h  rectangle.hpp
parsers/: nifti.cpp  nifti.hpp  tiffgl.cpp  tiffgl.hpp
shaders/: fragment.glsl  rectFrag.glsl  vertex.glsl
